2008-12-20  Alper KANAT  <alperkanat@raptiye.org>

	* settings-example.py: bumped version number to 1.0.3..
	* contrib/twitter.py: fixed a bug.. will also open a ticket for this..
	* blog/views.py: fixed a bug in the blog homepage that caused duplicate
	entries being shown when they're sticky..
	* blog/admin.py, contrib/twitter.py, settings-example.py: if permitted in
	settings, raptiye now sends updates per new entry..
	* TODO: removed twitter updation todo..
	* extra/tinyurl.py: added new module to shorten urls using tinyurl's hidden
	api..
	
2008-12-19  Alper KANAT  <alperkanat@raptiye.org>

	* TODO: added new todo..
	* blog/feeds.py, blog/templatetags/blog_filters.py, blog/views.py,
	extra/search.py, extra/tag_cloud.py, media/css/style.css,
	templates/blog/sticky.html: sticky pages are same as other posts now.. the
	only difference is that they're shown in a different style at homepage..
	* blog/models.py: removed some unnecessary code..
	* blog/templatetags/blog_filters.py: fixed a layout problem that was being
	caused by BeautifulSoup's prettify() method since it adds unnecessary
	spaces..
	* templates/blog/homepage.html: some readability enhancement..
	  
2008-12-07  Alper KANAT  <alperkanat@raptiye.org>

	* comments/views.py: fixed a bug due to the change in Captcha class..
	* media/css/style.css: fixed some css layout problems in sticky posts..

2008-12-06  Alper KANAT  <alperkanat@raptiye.org>

	* templates/blog/homepage.html, templates/blog/sticky.html: fixed some
	layout problems..
	* TODO: removed some of the accomplished todo's
	* templates/blog/sidebar.html: added forgotten password link..
	* templates/frontpage/base.html: openid delegation is added.. more to be
	coming soon.. (probably with 1.0.3)
	* extra/captcha_test.py: removed..
	* templates/users/forgotten_password.html, media/css/style.css,
	users/forms.py, users/urls.py, users/views.py, templates/blog/sidebar.html,
	extra/mail.py: forgot my password and register links added to the login